updating button with p tag inside

--- a/src/App.css
+++ b/src/App.css
@@ -32,6 +32,9 @@ th {
 }
 
 .prev-btn, .next-btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   width: 6rem;
   height: 2rem;
   background-color: darkgreen;
